refactored equal test #26